--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.4",
   "description": "Convert a JS object to CSS string. Similar to React's output of CSS, extracted into a module.",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "jest --watchAll"
+  },
   "author": "Nate Wienert",
   "license": "MIT",
   "dependencies": {
     "add-px-to-style": "^1.0.0",
     "hyphenate-style-name": "^1.0.0"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
